--- a/index.ipynb
+++ b/index.ipynb
@@ -364,10 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
@@ -375,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +381,7 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "text": [],
          "type": "scatter"
         },
         {
@@ -395,10 +394,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"ffce7095-55c1-44d8-9461-48f534d0b63a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ffce7095-55c1-44d8-9461-48f534d0b63a\", [{\"type\": \"scatter\"}, {\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b7192fdb-60ff-4715-bb25-bac57cf38c87\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7192fdb-60ff-4715-bb25-bac57cf38c87\", [{\"type\": \"scatter\", \"text\": []}, {\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"ffce7095-55c1-44d8-9461-48f534d0b63a\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ffce7095-55c1-44d8-9461-48f534d0b63a\", [{\"type\": \"scatter\"}, {\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b7192fdb-60ff-4715-bb25-bac57cf38c87\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b7192fdb-60ff-4715-bb25-bac57cf38c87\", [{\"type\": \"scatter\", \"text\": []}, {\"type\": \"scatter\", \"x\": [], \"y\": [], \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
