automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,17 +289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -327,17 +327,21 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
          "type": "scatter"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"d7b6bd17-ef6c-4c12-bf75-fd06d4a2dd72\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d7b6bd17-ef6c-4c12-bf75-fd06d4a2dd72\", [{\"type\": \"scatter\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b35c1cd9-aad9-4c49-8a5c-a57b2372c4ab\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b35c1cd9-aad9-4c49-8a5c-a57b2372c4ab\", [{\"type\": \"scatter\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"d7b6bd17-ef6c-4c12-bf75-fd06d4a2dd72\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d7b6bd17-ef6c-4c12-bf75-fd06d4a2dd72\", [{\"type\": \"scatter\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"b35c1cd9-aad9-4c49-8a5c-a57b2372c4ab\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b35c1cd9-aad9-4c49-8a5c-a57b2372c4ab\", [{\"type\": \"scatter\", \"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
