--- a/index.ipynb
+++ b/index.ipynb
@@ -299,22 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'scatter'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bar_trace_first_three_pops['type'] # 'bar'"
+    "bar_trace_first_three_pops['type'] = 'bar'# 'bar'\n",
+    "bar_trace_first_three"
    ]
   },
   {
