--- a/index.ipynb
+++ b/index.ipynb
@@ -299,12 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'type': 'bar'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bar_trace_first_three_pops['type'] = 'bar'# 'bar'\n",
-    "bar_trace_first_three"
+    "bar_trace_first_three_pops"
    ]
   },
   {
