automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,7 +386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
   },
   {
