automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -382,12 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': , 'y': [], 'text': []}"
    ]
   },
   {
