--- a/index.ipynb
+++ b/index.ipynb
@@ -382,12 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': , 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': []}\n",
+    "bar_trace_first_three_areas"
    ]
   },
   {
