--- a/index.ipynb
+++ b/index.ipynb
@@ -382,12 +382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'type': 'bar',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
+       " 'y': [4758, 2731571, 3194]}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "bar_trace_first_three_areas"
    ]
   },
