--- a/index.ipynb
+++ b/index.ipynb
@@ -382,27 +382,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
-       " 'type': 'bar',\n",
-       " 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'],\n",
-       " 'y': [4758, 2731571, 3194]}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'bar', 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'y': [4758, 2731571, 3194], 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang']}\n",
+      "{'type': 'bar', 'text': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'x': ['Buenos Aires', 'Toronto', 'Pyeongchang'], 'y': [2891000, 2800000, 2581000]}\n"
+     ]
     }
    ],
    "source": [
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
-    "bar_trace_first_three_areas"
+    "print (bar_trace_first_three_areas)\n",
+    "print (bar_trace_first_three_pops)\n"
    ]
   },
   {
